@@ -22,6 +22,13 @@
 * Add organization_id to all MySQL tables that might need it someday. Orgs are
   not used at all, so only the default value of 1 currently makes it to the 
   database.
+* Finally ran 'go fmt' on goiardi. It didn't even mess up the long comment
+  blocks, which was what I was afraid it would do. I also ran golint against
+  goiardi and took its recommendations where it made sense, which was most
+  areas except for some involving generated parser code, comments on
+  GobEncode/Decode, commenting a bunch of identical functions on an interface
+  in search, and a couple of cases involving make and slices. All in all,
+  though, the reformatting, linting, and light refactoring has done it good.
 
 0.5.2
 -----
